# react-analyzer

./: .codecov.yml  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .rarc.example  .reactanalyzer.example.json  .reactanalyzerrc.json.example  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md  RELEASING.md  go.mod  install.sh
.github/workflows/: build.yml  ci.yml  coverage.yml  release.yml
cmd/react-analyzer/: main.go
docs/: CONFIG.md  CONTRIBUTING.md  CURRENT_STATE.md  ROADMAP.md  known_limitations.md
docs/archive/: README.md  implementation_plan.md
docs/design/: interfaces.md  phase2_graph_data_structures.md  phase2_prop_drilling_detection.md  phase2_vscode_extension_architecture.md  project_outline.md  react_antipatterns_catalog.md
docs/implementation-plans/: derived-state-rule.md  no-inline-props-rule.md  no-stale-state-rule.md
docs/rules/: deep-prop-drilling.md  no-derived-state.md  no-inline-props.md  no-stale-state.md  unstable-props-to-memo.md
internal/analyzer/: config.go  types.go  (+10 more)
prompts/: cross_file_analysis.md  interfaces.md  mvp_scope.md  rust_vs_go_decision.md  technical_design.md  try_tree_sitter.md  validation.md
rules/: no-object-deps.md
src/: extract.rs  extractor.rs  main.rs  output.rs  package_json.rs  parser.rs  path_utils.rs  print.rs  scan.rs  scanner.rs  ts_config.rs
tests/: js_integration_test.rs
ui/: .gitignore  index.html  package.json
vscode-extension/: .gitignore  .vscodeignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TESTING.md  VISUAL_IMPROVEMENTS.md  package-lock.json  package.json
(+136 files in other folders)
