[package]
name = "react-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
lazy_static = "1.4.0"
path-absolutize = "3.1.0"
regex = "1.8.4"
rome_js_parser = "0.0.2"
rome_js_syntax = "0.0.2"
rome_rowan = "0.0.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
